--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,16 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "node src/server.js",
-  "test": "jest",
-  "test:watch": "jest --watch",
-  "clean": "node scripts/clean-artifacts.js"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "clean": "node scripts/clean-artifacts.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "isomorphic-unfetch": "^4.0.2",
-    "spotify-url-info": "^2.2.3"
+    "spotify-url-info": "^2.2.3",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
