Add corner score marks for photo alignment; physical sizing inches on SVG; prepare-cover endpoint (300DPI) and frontend to download correctly sized cover; update size labels (~12in and ~5in tall)

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,9 @@
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "isomorphic-unfetch": "^4.0.2",
-    "spotify-url-info": "^2.2.3",
-    "stripe": "^18.5.0"
+  "spotify-url-info": "^2.2.3",
+  "stripe": "^18.5.0",
+  "sharp": "^0.33.3"
   },
   "devDependencies": {
     "jest": "^29.7.0"
