--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "isomorphic-unfetch": "^4.0.2",
   "spotify-url-info": "^2.2.3",
   "stripe": "^18.5.0",
-  "sharp": "^0.33.3"
+  "sharp": "^0.33.3",
+  "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "jest": "^29.7.0"
