--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "isomorphic-unfetch": "^4.0.2",
+  "cookie-parser": "^1.4.6",
   "spotify-url-info": "^2.2.3",
   "stripe": "^18.5.0",
   "sharp": "^0.33.3",
